--- a/final style.css
+++ b/final style.css
@@ -313,7 +313,7 @@ p {
     flex-direction: column;
     justify-content: center;
     position: relative;
-    padding-top: 80px;
+    padding-top: 120px;
     overflow: hidden;
 }
 .hero-background {
